--- a/src/main/resources/templates/myPurchasedTickets1.html
+++ b/src/main/resources/templates/myPurchasedTickets1.html
@@ -32,6 +32,7 @@
             color: var(--dark);
             line-height: 1.6;
             padding: 20px;
+            background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
         }
 
         .container {
