--- a/src/main/resources/templates/otp.html
+++ b/src/main/resources/templates/otp.html
@@ -250,7 +250,7 @@
         </div>
         <div class="otp-header">
             <h2>OTP Verification</h2>
-            <p>We've sent a verification code to your email address. Please enter the code below to verify your account.</p>
+            <p>We've sent a verification code to your <span style="color: red">email address</span>. Please enter the code below to verify your account.</p>
         </div>
         
         <form action="/otp" method="post" class="otp-form">
